<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world"></string>
    <string name="app_name">VitDisComp</string>
    <string name="wallpaper_description">Vitosha Trade Wallpaper Distributed Computing Project</string>
    <string name="vitosha_trade_wallpaper_label">Vitosha Trade Wallpaper</string>
    <string name="title_activity_options">Vitosha Trade Wallpaper</string>
    <string name="set_wallpaper_label">Set Wallpaper</string>
    <string name="loading_title">Device Computation Loading</string>
    <string name="set_wallpaper_title">Set Wallpaper</string>
    <string name="server_url_title">Remote Server URL</string>
    <string name="positioning_title">Panels Position</string>
    <string name="panels_title">Panels Size</string>
    <string name="close_title">CLOSE</string>

</resources>
