<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

    <SwitchPreference
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="set_wallpaper"
        android:title="@string/set_wallpaper_title" />

    <EditTextPreference
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:defaultValue="http://vitoshatrade.veldsoft.eu/"
        android:key="server_url"
        android:title="@string/server_url_title"/>

    <ListPreference
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:defaultValue="14400000"
        android:entries="@array/loadings_keys"
        android:entryValues="@array/loadings_values"
        android:key="loading"
        android:persistent="true"
        android:title="@string/loading_title" />

    <ListPreference
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:defaultValue="cc"
        android:entries="@array/positions_keys"
        android:entryValues="@array/positions_values"
        android:key="positioning"
        android:persistent="true"
        android:title="@string/positioning_title" />

    <ListPreference
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:defaultValue="100"
        android:entries="@array/panels_keys"
        android:entryValues="@array/panels_values"
        android:key="sizing"
        android:persistent="true"
        android:title="@string/panels_title" />

</PreferenceScreen>